--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.10.0
 crispy-bootstrap4==2025.6
 Django==5.2.7
 django-crispy-forms==2.4
+dotenv==0.9.9
 pillow==12.0.0
+python-dotenv==1.1.1
 sqlparse==0.5.3
 typing_extensions==4.15.0
