add .env.sample file

--- a/.env.sample
+++ b/.env.sample
@@ -1,15 +1,17 @@
-EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
-EMAIL_HOST='smtp.gmail.com'
-EMAIL_PORT=587
-EMAIL_USE_TLS=False
-EMAIL_HOST_USER='emailbackend1@gmail.com'
-EMAIL_HOST_PASSWORD='hyvl htgd ginl fzfq'
-DEFAULT_FROM_EMAIL = 'no-reply@localhost'
-
-SECRET_KEY=<>
+SECRET_KEY=your_django_secret_key
 DJANGO_DEBUG=True
-DATABASE_URL='postgresql://blog_app_user:wk60gIRhOJVt6BPAjvTo0gmsdfEgIDN4@dpg-d3ugkkodl3ps73f50t40-a.oregon-postgres.render.com/blog_app_db_0xwi'
+DATABASE_URL=your_database_url
 
-CLOUDINARY_CLOUD_NAME=dfngbmsno
-CLOUDINARY_API_KEY=547671268462793
-CLOUDINARY_API_SECRET=50Y9T9BE1LKSzgZpa8g1HsqS3oU
+# Cloudinary credentials
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Email config (optional)
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_password
+DEFAULT_FROM_EMAIL = 'your_default_from_email'
